fix: css now works in all sized
When the height was too small, the hamburger menu would not fit, now there is a different breakpoint for the height.

--- a/CSS/media.css
+++ b/CSS/media.css
@@ -1,18 +1,13 @@
-@media screen {
-    *{
-        overflow-x: hidden;  
-    }
 
-li {width: 100%;}
-}
-@media screen and (max-width: 1000px ) and (min-width :750px){
+
+@media screen and (max-width: 1000px ) and (min-width :750px) and (min-height:450px){
 
     #hamburger{
         display: block;
     }
     nav ,header{
         font-size:140%;
-    }
+    /* position: sticky; */}
     section,footer,aside{
         font-size: 110%;
       
@@ -23,10 +18,10 @@ li {width: 100%;}
         justify-content: flex-start;
         position: fixed;
        
-        top: 3rem;
+        top: 3.73rem;
         background-color: var(--secondaryColor);
         width: 161px;
-        /* transform: translate(454px, 481px); */right: -10.925rem;
+        /* transform: translate(1px, 481px); */right: -10.925rem;
         height: 100%;
         /* padding-top: 6%; */
     }
@@ -37,12 +32,14 @@ li {width: 100%;}
     .showNavigation{
         right: 0rem;
         /* top: 3rem; *//* transition: 0.2s; */
-      /* transform: translate(100%, 57px); */}
+      /* transform: translate(100%, 57px); */
+       box-shadow: -20px 0 40px rgba(0,0,0,0.3);
+}
       
     
 }
 
-@media screen  and (min-width: 350px)and (max-width: 750px){
+@media screen  and (min-width: 350px)and (max-width: 750px) and (min-height:450px){
     #hamburger{
         display: block;
     }
@@ -79,37 +76,36 @@ ul.navBar.showNavigation {}
       
     
 }
-@media screen and (max-width: 350px) {
+@media (max-width: 350px)  and (min-height:450px)
+{
     *{
         font-size: 23px;
     }
 
-nav {/* width: 100%; */}
-
-footer {position: fixed;}
+footer {
+    position: fixed;
+}
 
 li {
-    
-    
-    
-    
-    
-    
-    
-    
-    width: 100%;border: 1px solid aliceblue;}
+    width: 100%;
+    border: 1px solid aliceblue;
+}
 
-header {/* flex-basis: auto; */flex-direction: column;}
+header {
+    flex-direction: column;
+}
 
-header {padding: 0;}
+header {
+    padding: 0;
+    position: unset;
+/* width: 100%; *//* top: 0; */}
 
-nav {padding: 0;}
-
-li {}
-
-.navButton {padding: 1rem;/* display: table-caption; */}
-
-a.navButton {}
+nav {
+    padding: 0;
+}
+.navButton {
+    padding: 1rem;
+}
 
 #logo {display: none;}
 
@@ -119,19 +115,59 @@ a.navButton {}
 
 .navBar {flex-direction: column;
     align-items: center;
-    /* justify-content: space-between; */
-    /* position: relative; */
-    /* top: 0; */
     background-color: var(--secondaryColor);
-    /* width: 100%; */
-    /* right: 3rem; */
     height: 034;
-    /* padding-top: 9%; */}
+display: table;table-layout: fixed;width: 100%;/* top: 0; */}
+
+}
+
+
+@media (max-height: 450px) 
+{
+    *{
+        font-size: 23px;
+    }
+
+footer {
+    position: fixed;
+}
+
+li {
+    width: 100%;
+    border: 1px solid aliceblue;
+}
+
+header {
+    padding: 0;
+position: absolute;}
+
+header {
+    /* padding: 0; */
+    top: 0;position: unset;
+}
+
+nav {
+    padding: 0;
+}
+.navButton {
+    padding: 1rem;
+}
+
+#logo {display: none;}
+
+#hamburger {display: none;}
+
+.hamburger {display: block;}
+
+.navBar {width: 100%;min-width: 100%;/* position: fixed; *//* top: 0; */display: flex;flex-direction: column;
+    align-items: center;
+    background-color: var(--secondaryColor);
+    /* height: 10%; */
+justify-content: center;display: table;
+    table-layout: fixed;
+    width: 100%;}
 
 ul.navBar {}
 
-ul.navBar {}
-    input[type ="submit"], input[type = "reset"], button {
-        font-size: 20% ;  
-     }
+
 }
